feat: separate routing, db access; auth
